position absolute stylings removed from slideshow css as it messed up the site on mobile, now it only spills over the underside, but slideshow titles no longer scroll with page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -138,7 +138,7 @@ a {
 
 .cb-slideshow,
 .cb-slideshow:after { 
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100%;
     top: 0px;
@@ -153,7 +153,7 @@ a {
 .cb-slideshow li span { 
     width: 100%;
     height: 100%;
-    position: absolute; /*remove these?*/
+    position: fixed;
     top: 0px;
     left: 0px;
     right: 0;
